--- a/index.html
+++ b/index.html
@@ -141,6 +141,6 @@
     <a id="loadMoreButton" class="loadMore_button" href="javascript:void(0);">加载更多</a>
 </div>
 </body>
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script><!--http or https 都能访问到-->
+<script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script><!--http or https 都能访问到-->
 <script src="script.js"></script>
 </html>
