--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>My Pages</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="favicon.ico">
+    <link rel="prefetch" href="./images/giphy.gif"/>
 </head>
 <body>
 <div class="wrapper">
     <section class="profile">
         <div class="avatar">
-            <img src="./images/avatar.jpg" alt="主题图片"/>
+            <img src="./images/youTube.jpg" alt="youTube图片"/>
         </div>
         <div class="category">
             <span>即将上映</span>
@@ -102,12 +103,12 @@
             <li>
                 <img src="./images/sqnx.jpg" alt="神奇女侠"/>
                 <h3>神奇女侠</h3>
-                <p>神奇女侠,正义从她开始</p>
+                <p>神奇女侠，正义从她开始</p>
             </li>
             <li>
                 <img src="./images/bxjg.jpg" alt="变形金刚5"/>
                 <h3>变形金刚5</h3>
-                <p>变形金刚5，最后的骑士，变形出发</p>
+                <p>变形金刚5，变形出发</p>
             </li>
             <li>
                 <img src="./images/mny.jpg" alt="木乃伊"/>
