--- a/page-2.html
+++ b/page-2.html
@@ -3,7 +3,7 @@
     {"url":"./images/amfy.jpg","alt":"澳门风云","title":"澳门风云Ⅲ","text":"没想到你是这样的赌神"},
     {"url":"./images/egts.jpg","alt":"恶棍天使","title":"恶棍天使","text":"再导超式无厘头喜剧"},
     {"url":"./images/wbspjl.jpg","alt":"我不是潘金莲","title":"我不是潘金莲","text":"村妇离婚假戏真做雇佣杀人"},
-    {"url":"./images/ldxl.jpg","alt":"伦敦陷落","title":"伦敦陷落","text":"伦敦地标纷纷炸毁，再现英雄本色"},
+    {"url":"./images/ldxl.jpg","alt":"伦敦陷落","title":"伦敦陷落","text":"伦敦地标炸毁，再现英雄本色"},
     {"url":"./images/msssnh.jpg","alt":"谋杀似水年华","title":"谋杀似水年华","text":"AngleBaby阮经天尺度大开"},
     {"url":"./images/nl.jpg","alt":"逆鳞","title":"逆鳞","text":"玄彬变朝鲜王捍卫王位"},
     {"url":"./images/nsyj.jpg","alt":"逆时营救","title":"逆时营救","text":"杨幂穿越三生，霍建华飞车追杀"},
