--- a/page-3.html
+++ b/page-3.html
@@ -2,13 +2,13 @@
     "content":[
     {"url":"./images/wdsl.jpg","alt":"弯道杀戮","title":"Machete Kills","text":"以胸部做武器的Cult片"},
     {"url":"./images/xlj.jpg","alt":"寻龙诀","title":"寻龙诀","text":"鬼吹灯，寻龙诀"},
-    {"url":"./images/xltfn.jpg","alt":"夏洛特烦恼","title":"夏洛特烦恼","text":"全程笑Cry，一剪梅boy尹正自带BGM"},
-    {"url":"./images/snl.jpg","alt":"鲨虐恋","title":"鲨虐恋","text":"一美相爱相杀，意识穿越重写变种历史"},
+    {"url":"./images/xltfn.jpg","alt":"夏洛特烦恼","title":"夏洛特烦恼","text":"全程笑Cry，一剪梅boy"},
+    {"url":"./images/snl.jpg","alt":"鲨虐恋","title":"鲨虐恋","text":"一美相爱相杀，意识穿越重写"},
     {"url":"./images/yntt.jpg","alt":"一念天堂","title":"一念天堂","text":"一人千面，与网红马丽相爱相杀"},
-    {"url":"./images/yxjx.jpg","alt":"异星觉醒","title":"异星觉醒","text":"科学家唤醒外星生物，空间基地上演血腥大逃杀"},
+    {"url":"./images/yxjx.jpg","alt":"异星觉醒","title":"异星觉醒","text":"外星生物，空间基地血腥大逃杀"},
     {"url":"./images/zqnms.jpg","alt":"攒钱罗曼史","title":"攒钱罗曼史","text":"撩妹抢钱两不误"},
     {"url":"./images/jtbjt.jpg","alt":"惊天绑架团","title":"惊天绑架团","text":"惊天利用，杀人狂魔变待宰羔羊"},
-    {"url":"./images/ly.jpg","alt":"三生三世男神女神","title":"三生三世","text":"三生三世男神女神驾到"}
+    {"url":"./images/ly.jpg","alt":"大片起来嗨","title":"大片起来嗨","text":"三生三世，大片起来嗨"}
     ],
     "hasNextPage":false
 }
